fixing height for bluecircles on subpages on tablet sizes

--- a/wp-content/themes/jj-kommunikation/jj-kommunikation/style.css
+++ b/wp-content/themes/jj-kommunikation/jj-kommunikation/style.css
@@ -3575,7 +3575,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
     * Min width: 512px
     * Max width: 574px
     */
-    @media (min-width: 512px) and (max-width: 574px) {
+    @media (min-width: 512px) and (max-width: 781px) {
         .bluecircle.right:before {
             top: 490px !important;
         }
